--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "projetofinalada",
+  "homepage": "https://afraniocaires.github.io/BestBrowserGames",
+  "name": "bestbrowsergames",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run dev",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -47,6 +50,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "json-server": "^0.16.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
